--- a/src/Components/slider.css
+++ b/src/Components/slider.css
@@ -4,3 +4,10 @@
     background-repeat: no-repeat;
     background-position: center right;
 }
+
+.quoteDiv {
+    background-image: url('../assets/pattern-quotes.svg');
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position: 60px top;
+}
