--- a/src/Components/slider.css
+++ b/src/Components/slider.css
@@ -11,3 +11,8 @@
     background-repeat: no-repeat;
     background-position: 60px top;
 }
+
+.custom-shadow {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+  }
+  
